# ai-content-pipeline

./: .gitignore  README.md  TODO.md  pyproject.toml
analytics/: weekly-template.yaml
cli/: config.py  main.py
config/: publish.example.yaml
docs/: auto-publish-architecture.md
prompts/: code-comment.md  jike-post.md  tech-blog-v1.md  twitter-thread.md  xiaohongshu-note.md  zhihu-answer.md
scripts/: markdown_formatter.py  poster_generator.py  poster_template.html
skills/blog-from-spec/: SKILL.md  blog_generator.py
skills/content-pipeline-gen/: SKILL.md
skills/content-pipeline-publish/: SKILL.md
skills/content-pipeline-review/: SKILL.md
skills/poster-gen/: SKILL.md
sops/: content-distribution.md  jike.md  x-twitter.md  xiaobaotong.md  xiaohongshu.md  zhihu.md
specs/: ai-content-pipeline-v1.md  example-spec.md
